# src/main/java/mg/federation/federationapi/controller/AdmissionController.java
@@ -1,14 +1,21 @@
 package mg.federation.federationapi.controller;
 
-import mg.federation.dto.AdmissionRequest;
+import mg.federation.federationapi.dto.AdmissionRequest;
+import mg.federation.federationapi.service.AdmissionService;
 import org.springframework.web.bind.annotation.*;
 
 @RestController
 @RequestMapping("/admissions")
 public class AdmissionController {
 
+    private final AdmissionService service;
+
+    public AdmissionController(AdmissionService service) {
+        this.service = service;
+    }
+
     @PostMapping
     public String admit(@RequestBody AdmissionRequest request) {
-        return "Admission validée";
+        return service.admettre(request);
     }
 }
