# src/main/java/mg/federation/federationapi/controller/StatsFederationController.java
@@ -3,11 +3,11 @@ package mg.federation.federationapi.controller;
 import org.springframework.web.bind.annotation.*;
 
 @RestController
-@RequestMapping("/stats/federation")
+@RequestMapping("/stats-federation")
 public class StatsFederationController {
 
     @GetMapping
-    public String stats() {
-        return "Stats fédération";
+    public String getStats() {
+        return "Stats fédération: OK";
     }
 }
