# src/main/java/mg/federation/federationapi/dto/Collectivity.java
@@ -1,0 +1,52 @@
+package mg.federation.federationapi.dto;
+
+import java.util.List;
+
+public class Collectivity {
+
+    private String id;
+    private String number;
+    private String name;
+    private String location;
+    private List<Member> members;
+
+    public String getId() {
+        return id;
+    }
+
+    public void setId(String id) {
+        this.id = id;
+    }
+
+    public String getNumber() {
+        return number;
+    }
+
+    public void setNumber(String number) {
+        this.number = number;
+    }
+
+    public String getName() {
+        return name;
+    }
+
+    public void setName(String name) {
+        this.name = name;
+    }
+
+    public String getLocation() {
+        return location;
+    }
+
+    public void setLocation(String location) {
+        this.location = location;
+    }
+
+    public List<Member> getMembers() {
+        return members;
+    }
+
+    public void setMembers(List<Member> members) {
+        this.members = members;
+    }
+}
