# src/main/java/mg/federation/federationapi/dto/CollectivityIdentity.java
@@ -1,0 +1,23 @@
+package mg.federation.federationapi.dto;
+
+public class CollectivityIdentity {
+
+    private String number;
+    private String name;
+
+    public String getNumber() {
+        return number;
+    }
+
+    public void setNumber(String number) {
+        this.number = number;
+    }
+
+    public String getName() {
+        return name;
+    }
+
+    public void setName(String name) {
+        this.name = name;
+    }
+}
