# src/main/java/mg/federation/federationapi/dto/CreateCollectivityStructure.java
@@ -1,0 +1,11 @@
+package mg.federation.federationapi.dto;
+
+public class CreateCollectivityStructure {
+
+    private String president;
+    private String vicePresident;
+    private String treasurer;
+    private String secretary;
+
+
+}
