# src/main/java/mg/federation/federationapi/dto/CreateMember.java
@@ -1,0 +1,129 @@
+package mg.federation.federationapi.dto;
+
+import java.time.LocalDate;
+import java.util.List;
+
+public class CreateMember {
+
+    private String firstName;
+    private String lastName;
+    private LocalDate birthDate;
+    private String gender;
+    private String address;
+    private String profession;
+    private int phoneNumber;
+    private String email;
+    private String occupation;
+
+    private String collectivityIdentifier;
+    private List<String> referees;
+
+    private boolean registrationFeePaid;
+    private boolean membershipDuesPaid;
+
+    // ===== GETTERS & SETTERS =====
+
+    public String getFirstName() {
+        return firstName;
+    }
+
+    public void setFirstName(String firstName) {
+        this.firstName = firstName;
+    }
+
+    public String getLastName() {
+        return lastName;
+    }
+
+    public void setLastName(String lastName) {
+        this.lastName = lastName;
+    }
+
+    public LocalDate getBirthDate() {
+        return birthDate;
+    }
+
+    public void setBirthDate(LocalDate birthDate) {
+        this.birthDate = birthDate;
+    }
+
+    public String getGender() {
+        return gender;
+    }
+
+    public void setGender(String gender) {
+        this.gender = gender;
+    }
+
+    public String getAddress() {
+        return address;
+    }
+
+    public void setAddress(String address) {
+        this.address = address;
+    }
+
+    public String getProfession() {
+        return profession;
+    }
+
+    public void setProfession(String profession) {
+        this.profession = profession;
+    }
+
+    public int getPhoneNumber() {
+        return phoneNumber;
+    }
+
+    public void setPhoneNumber(int phoneNumber) {
+        this.phoneNumber = phoneNumber;
+    }
+
+    public String getEmail() {
+        return email;
+    }
+
+    public void setEmail(String email) {
+        this.email = email;
+    }
+
+    public String getOccupation() {
+        return occupation;
+    }
+
+    public void setOccupation(String occupation) {
+        this.occupation = occupation;
+    }
+
+    public String getCollectivityIdentifier() {
+        return collectivityIdentifier;
+    }
+
+    public void setCollectivityIdentifier(String collectivityIdentifier) {
+        this.collectivityIdentifier = collectivityIdentifier;
+    }
+
+    public List<String> getReferees() {
+        return referees;
+    }
+
+    public void setReferees(List<String> referees) {
+        this.referees = referees;
+    }
+
+    public boolean isRegistrationFeePaid() {
+        return registrationFeePaid;
+    }
+
+    public void setRegistrationFeePaid(boolean registrationFeePaid) {
+        this.registrationFeePaid = registrationFeePaid;
+    }
+
+    public boolean isMembershipDuesPaid() {
+        return membershipDuesPaid;
+    }
+
+    public void setMembershipDuesPaid(boolean membershipDuesPaid) {
+        this.membershipDuesPaid = membershipDuesPaid;
+    }
+}
